--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(45deg, #6a11cb, #2575fc); /* Gradiente de fundo */
+    background: linear-gradient(45deg, #6a11cb, #000000); /* Gradiente de fundo */
     color: #fff;
     line-height: 1.6;
     padding: 0 20px;
@@ -40,7 +40,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #ffcc00; /* Cor dourada ao passar o mouse */
+    color: #000000; /* Cor dourada ao passar o mouse */
 }
 
 /* Seção sobre */
@@ -55,7 +55,7 @@ nav ul li a:hover {
 #sobre h1 {
     font-size: 3rem;
     margin-bottom: 20px;
-    color: #ffcc00;
+    color: #000000;
 }
 
 #sobre p {
@@ -77,7 +77,7 @@ nav ul li a:hover {
 #trabalhos h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #2575fc;
+    color: #ebedf0;
 }
 
 .trabalho {
@@ -99,7 +99,7 @@ nav ul li a:hover {
 }
 
 .trabalho h3 {
-    color: #2575fc;
+    color: #f5f5f5;
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
@@ -119,7 +119,7 @@ nav ul li a:hover {
 #referencias {
     text-align: center;
     padding: 60px 20px;
-    background-color: #ffcc00;
+    background-color: #141102;
     color: #333;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
