--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(45deg, #6a11cb, #fdfdfd); /* Gradiente de fundo */
+    background: linear-gradient(45deg, #6a11cb, #0e0d0d); /* Gradiente de fundo */
     color: #fff;
     line-height: 1.6;
     padding: 0 20px;
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     padding: 15px 0;
     border-radius: 10px;
     margin-bottom: 30px;
