--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ nav ul li a:hover {
 }
 
 #referencias a:hover {
-    color: #2575fc;
+    color: #6a11cb;
 }
 
 /* Seção de Contato */
@@ -163,7 +163,7 @@ nav ul li a:hover {
 #contato h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #ffcc00;
+    color: #6a11cb;
 }
 
 #contato p {
