--- a/style.css
+++ b/style.css
@@ -147,14 +147,14 @@ nav ul li a:hover {
 }
 
 #referencias a:hover {
-    color: #6a11cb;
+    color: #6a10ca;
 }
 
 /* Seção de Contato */
 #contato {
     text-align: center;
     padding: 60px 20px;
-    background-color: #333;
+    background-color: #faf8f8;
     color: #fff;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
@@ -163,7 +163,7 @@ nav ul li a:hover {
 #contato h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #6a11cb;
+    color: #ffffff;
 }
 
 #contato p {
