--- a/style.css
+++ b/style.css
@@ -77,12 +77,12 @@ nav ul li a:hover {
 #trabalhos h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #ebedf0;
+    color: #040405;
 }
 
 .trabalho {
     display: inline-block;
-    background-color: #f5f5f5;
+    background-color: #0a0707;
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
@@ -119,8 +119,8 @@ nav ul li a:hover {
 #referencias {
     text-align: center;
     padding: 60px 20px;
-    background-color: #141102;
-    color: #333;
+    background-color: #6a11cb;
+    color: #6a11cb;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
 }
