--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav ul li a:hover {
 #trabalhos {
     text-align: center;
     padding: 60px 20px;
-    background-color: #fff;
+    background-color: #6a11cb;
     color: #333;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
