--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(45deg, #6a11cb, #0e0d0d); /* Gradiente de fundo */
+    background: linear-gradient(45deg, #6a11cb, #2575fc); /* Gradiente de fundo */
     color: #fff;
     line-height: 1.6;
     padding: 0 20px;
 }
 
 header {
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 15px 0;
     border-radius: 10px;
     margin-bottom: 30px;
@@ -40,7 +40,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #000000; /* Cor dourada ao passar o mouse */
+    color: #ffcc00; /* Cor dourada ao passar o mouse */
 }
 
 /* Seção sobre */
@@ -55,7 +55,7 @@ nav ul li a:hover {
 #sobre h1 {
     font-size: 3rem;
     margin-bottom: 20px;
-    color: #fdfcfc;
+    color: #ffcc00;
 }
 
 #sobre p {
@@ -68,7 +68,7 @@ nav ul li a:hover {
 #trabalhos {
     text-align: center;
     padding: 60px 20px;
-    background-color: #6a11cb;
+    background-color: #fff;
     color: #333;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
@@ -77,12 +77,12 @@ nav ul li a:hover {
 #trabalhos h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #040405;
+    color: #2575fc;
 }
 
 .trabalho {
     display: inline-block;
-    background-color: #0a0707;
+    background-color: #f5f5f5;
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
@@ -99,7 +99,7 @@ nav ul li a:hover {
 }
 
 .trabalho h3 {
-    color: #f5f5f5;
+    color: #2575fc;
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
@@ -119,8 +119,8 @@ nav ul li a:hover {
 #referencias {
     text-align: center;
     padding: 60px 20px;
-    background-color: #6a11cb;
-    color: #6a11cb;
+    background-color: #ffcc00;
+    color: #333;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
 }
@@ -147,14 +147,14 @@ nav ul li a:hover {
 }
 
 #referencias a:hover {
-    color: #6a10ca;
+    color: #2575fc;
 }
 
 /* Seção de Contato */
 #contato {
     text-align: center;
     padding: 60px 20px;
-    background-color: #faf8f8;
+    background-color: #333;
     color: #fff;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
@@ -163,7 +163,7 @@ nav ul li a:hover {
 #contato h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #ffffff;
+    color: #ffcc00;
 }
 
 #contato p {
