--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav ul li a:hover {
 #trabalhos h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #2575fc;
+    color: #000102;
 }
 
 .trabalho {
