--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(45deg, #6a11cb, #6a11cb; /* Gradiente de fundo */
+    background: linear-gradient(45deg, #6a11cb, #2575fc); /* Gradiente de fundo */
     color: #fff;
     line-height: 1.6;
     padding: 0 20px;
@@ -77,7 +77,7 @@ nav ul li a:hover {
 #trabalhos h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #000102;
+    color: #2575fc;
 }
 
 .trabalho {
