--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #ffffffe7;
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
