--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(45deg, #050505, #6a11cb); /* Gradiente de fundo */
-    color: #fff;
+    color: #b20edb;
     line-height: 1.6;
     padding: 0 20px;
 }
