--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav ul li a:hover {
 #sobre h1 {
     font-size: 3rem;
     margin-bottom: 20px;
-    color: #ffcc00;
+    color: #fff;
 }
 
 #sobre p {
