--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ nav ul li a:hover {
 #referencias {
     text-align: center;
     padding: 60px 20px;
-    background-color: #ffcc00;
+    background-color: #6a11cb;
     color: #333;
     border-radius: 10px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
