--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ nav ul li a:hover {
 #referencias a {
     text-decoration: none;
     font-size: 1.2rem;
-    color: #333;
+    color: #fff;
     transition: color 0.3s ease;
 }
 
